--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Shoping for Women, Man, Kids Fashion & Lifestyle - Myntra</title>
 
-    <link rel="stylesheet"href="1st.css">
+    <link rel="stylesheet"href="index.css">
     <link rel="stylesheet"href="utils.css">
 
 </head>
